--- a/src/index.css
+++ b/src/index.css
@@ -5,9 +5,15 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background: rgb(61,226,255);
+  background: -moz-linear-gradient(115deg, rgba(61,226,255,1) 0%, rgba(143,134,255,1) 50%, rgba(207,64,254,1) 100%);
+  background: -webkit-linear-gradient(115deg, rgba(61,226,255,1) 0%, rgba(143,134,255,1) 50%, rgba(207,64,254,1) 100%);
+  background: linear-gradient(115deg, rgba(61,226,255,1) 0%, rgba(143,134,255,1) 50%, rgba(207,64,254,1) 100%);
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#3de2ff",endColorstr="#cf40fe",GradientType=1);
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
